add text blocks in client controller and in server service